--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch --env-file=.env server"
+    "start": "node --watch server",
+    "start_dev" : "node --watch --env-file=.env server"
   },
   "keywords": [],
   "author": "",
